# Ginkgo

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
IR/: IR.cc  IR.h  op.h
example/: heart.c  qsort.c
front/: EnumsforEntry.h  IGenerable.h  Makefile  Node.cc  Node.h  SymbolTable.cc  SymbolTable.h  helpfunc.cc  lexer.l  yacc.y
front/declaration/: DeclSpec.cc  DeclSpec.h  Declaration.cc  Declaration.h  Declarator.cc  Declarator.h  DirDecl.cc  DirDecl.h  Init.h  InitDecl.cc  InitDecl.h  InitDeclList.cc  InitDeclList.h  Makefile  TypeName.h
front/expression/: AddExpr.cc  AddExpr.h  AndExpr.cc  AndExpr.h  ArgvExprList.h  AssignExpr.cc  AssignExpr.h  CastExpr.cc  CastExpr.h  CondExpr.cc  CondExpr.h  EqualExpr.cc  EqualExpr.h  ExprGenerateHelper.h  Expression.cc  Expression.h  InclOrExpr.cc  InclOrExpr.h  LogicalAndExpr.cc  LogicalAndExpr.h  LogicalOrExpr.cc  LogicalOrExpr.h  MultiExpr.cc  MultiExpr.h  PostfixExpr.cc  PostfixExpr.h  PrimaryExpr.cc  PrimaryExpr.h  RelationExpr.cc  RelationExpr.h  ShiftExpr.cc  ShiftExpr.h  UnaryExpr.cc  UnaryExpr.h  XorExpr.cc  XorExpr.h
gklib/: CMakeLists.txt  gkarg.c  gkassert.c  gkbit.c  gkckdint.c
include/: assert.h  ctype.h  errno.h  fenv.h  float.h  inttypes.h  iso646.h  limits.h  locale.h  setjmp.h  signal.h  stdalign.h  stdarg.h  stdbit.h  stdbool.h  stdckdint.h  stddef.h  stdint.h  stdio.h  stdlib.h  stdnoreturn.h  string.h  time.h  uchar.h  wchar.h  wctype.h
main/: Makefile  test-declaration.cc  test-main.cc  test-subfuncs.cc
main/test-cases/: qual-spec.c  spec-list.c
src/: CMakeLists.txt  Makefile
src/IR/: CMakeLists.txt  IRBuilder.cc  IRBuilder.h  IROperand.cc  IROperand.h  IRType.cc  IRType.h  Instr.cc  Instr.h  MemPool.h  Value.cc  Value.h
src/ast/: AssignExpr.cc  AssignExpr.h  BinaryExpr.cc  BinaryExpr.h  CMakeLists.txt  CType.cc  CType.h  CondExpr.cc  CondExpr.h  Constant.cc  Constant.h  Declaration.cc  Declaration.h  Expr.h  ExprList.h  Expression.cc  Expression.h  FuncDef.h  Identifier.h  Label.h  Object.h  Statement.cc  Statement.h  Str.h  Tag.h  UnaryExpr.cc  UnaryExpr.h
src/ast/types/: CArithmType.cc  CArithmType.h  CFuncType.h  CPtrType.h  CType.cc  CType.h
src/main/: CMakeLists.txt  Driver.cc  Driver.h  main.cc
src/messages/: CMakeLists.txt  Error.cc  Error.h  errmsg-en_us.cc  errmsg-zh_cn.cc
src/parser/: CMakeLists.txt  lexer.ll  yacc.yy
src/pass/: CFG.cc  CFG.h  CMakeLists.txt  CallingGraph.cc  CallingGraph.h  DUChains.cc  DUChains.h  DUInfo.cc  DUInfo.h  Dominators.cc  Dominators.h  FlowGraph.cc  FlowGraph.h  Liveness.cc  Liveness.h  LoopAnalyze.cc  LoopAnalyze.h  Pass.h  Pipeline.h  RegAlloc.h  SimpleAlloc.cc  SimpleAlloc.h  x64Alloc.cc  x64Alloc.h
src/test/: test-main.cc  test-subfuncs.cc
src/types/: ArithmType.cc  ArithmType.h  PtrType.h  Type.cc  Type.h
src/utils/: Constant.h  Container.h  DynCast.h  EnumsforEntry.h  Graph.h  IR.cc  IR.h  IROper.h  Pool.h  Scope.cc  Scope.h
src/visitast/: ASTVisitor.h  CMakeLists.txt  CodeChk.cc  CodeChk.h  Evaluator.cc  Evaluator.h  IRGen.cc  IRGen.h  Identifier.h  Scope.cc  Scope.h  TypeBuilder.cc  TypeBuilder.h  Visitor.h
src/visitir/: CMakeLists.txt  CodeGen.cc  CodeGen.h  EmitAsm.cc  EmitAsm.h  IRVisitor.h  Location.cc  Location.h  RegAlloc.h  SimpleAlloc.cc  SimpleAlloc.h  SysVConv.cc  SysVConv.h  x64.cc  x64.h
src/visitors/: IRGen.cc  IRGen.h  Visitor.h
tests/: test-main.cc  test-subfuncs.cc  test.h  test.sh
tests/lang/: align.c  array.c  auto.c  binary.c  br.c  char.c  dowhile.c  enum.c  eval.c  explicit.c  float.c  for.c  func.c  heterargv.c  hints.txt  if.c  implicit.c  link1.c  link2.c  number.c  pointer.c  qualify.c  scope.c  size.c  storage.c  string.c  struct.c  switch.c  typedef.c  typeof.c  unary.c  union.c  ux.c  var.c  variadic.c  while.c
tests/pass/: simple.c
tests/test-cases/: br.c  decl.c  eval.c  evaluate.c  func.c  hello.c  loop.c  pointer.c  spec-combination.c  var.c
utilities/: Constant.h  EnumsforEntry.h  IR.cc  IR.h  IROper.h  Makefile  SymbolTable.cc  SymbolTable.h  Type.h  TypeSpec.h  op.h
